[gd_scene load_steps=2 format=3 uid="uid://bdm5fxr8cplx8"]

[ext_resource type="Script" path="res://physics/hit_box.gd" id="1_40gud"]

[node name="HitBox" type="Area2D" groups=["attack"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_40gud")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="DisableTimer" to="." method="_on_disable_timer_timeout"]
